# cpplab

./: CMakeLists.txt  README.md
src/: pixel_traversal.cpp
